# cognito

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: commands.rs  config.rs  context.rs  events.rs  lib.rs  state.rs
core/src/extensions/: extension.rs  mod.rs  wasm_extension.rs  wasm_runtime.rs
crates/cognito-core/: Cargo.toml
crates/cognito-core/src/: commands.rs  config.rs  context.rs  events.rs  lib.rs  state.rs
crates/cognito-core/src/extensions/: mod.rs  wasm_runtime.rs
crates/cognito-finder/: Cargo.toml
crates/cognito-finder/src/: item.rs  lib.rs
src/: main.rs
src/screen/: mod.rs  search.rs
src/widget/: search.rs  search_bar.rs
