[package]
name = "cognito"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.0", features = ["full"] }
anyhow = "1.0.98"
uuid = { version = "1.17.0", features = ["v4"] }
