[package]
name = "cognito"
version = "0.1.0"
edition = "2024"

[dependencies]
cognito-core.workspace = true
iced.workspace = true
anyhow.workspace = true
log.workspace = true

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
cognito-core.path = "./crates/cognito-core"

serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.0", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }
anyhow = "1.0.98"
iced = "0.13.1"
log = "0.4.27"
