[package]
name = "cognito"
version = "0.1.0"
edition = "2024"

[dependencies]
core.workspace = true
iced.workspace = true
anyhow.workspace = true
log.workspace = true

[workspace]
resolver = "2"
members = ["core"]

[workspace.dependencies]
core.path = "./core"

serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.0", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
anyhow = "1.0.98"
iced = "0.13.1"
log = "0.4.27"
