[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
uuid.workspace = true
serde.workspace = true
tokio.workspace = true
async-trait = "0.1.88"
deno_core = "0.355.0"
deno_error = "0.7.0"
dirs = "6.0.0"
toml = "0.9.3"
serde_json = "1.0.138"
url = "2.5.0"
futures = "0.3.31"
